# OtusMatrix

./: .gitignore  CMakeLists.txt
inc/: hashFunction.hpp  matrix.hpp
src/: main.cpp
test/: main.cpp
